@@ -8,9 +8,9 @@ import java.net.InetAddress;
 import java.net.MulticastSocket;
 import java.net.SocketTimeoutException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
+import javax.annotation.Nullable;
 import net.minecraft.DefaultUncaughtExceptionHandler;
 import org.slf4j.Logger;
 
@@ -76,16 +76,15 @@ public class LanServerDetection {
          super();
       }
 
-      public synchronized boolean isDirty() {
-         return this.isDirty;
-      }
-
-      public synchronized void markClean() {
-         this.isDirty = false;
-      }
-
-      public synchronized List<LanServer> getServers() {
-         return Collections.unmodifiableList(this.servers);
+      @Nullable
+      public synchronized List<LanServer> takeDirtyServers() {
+         if (this.isDirty) {
+            List var1 = List.copyOf(this.servers);
+            this.isDirty = false;
+            return var1;
+         } else {
+            return null;
+         }
       }
 
       public synchronized void addServer(String var1, InetAddress var2) {
